<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kurwatron</name>
  <version>0.0.1</version>
  <description>kurwaTron tracked rover package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache License Version 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
  </export>
</package>
